@@ -433,65 +433,72 @@ public class BeanUtil {
 		}
 	}
 
+	/**
+	 * @TODO 提供对象get/set 类型转换
+	 * @param value
+	 * @param typeName getParameterTypes()[0].getTypeName() 没有转大小写
+	 * @return
+	 * @throws Exception
+	 */
 	public static Object convertType(Object value, String typeName) throws Exception {
 		return convertType(null, value, typeName, null);
 	}
 
 	/**
-	 * @optimize 待后期进一步优化，减少部分不必要的判断
-	 * @todo 类型转换
+	 * @todo 类型转换 2022-10-18 已经完成了优化，减少了不必要的判断
 	 * @param typeHandler
 	 * @param value
-	 * @param typeOriginName
-	 * @param genericType    泛型类型
+	 * @param typeName    getTypeName()没有转大小写
+	 * @param genericType 泛型类型
 	 * @return
 	 * @throws Exception
 	 */
-	public static Object convertType(TypeHandler typeHandler, Object value, String typeOriginName, Class genericType)
+	public static Object convertType(TypeHandler typeHandler, Object value, String typeName, Class genericType)
 			throws Exception {
 		Object paramValue = value;
-		// 转换为小写
-		String typeName = typeOriginName.toLowerCase();
 		if (paramValue == null) {
 			if ("int".equals(typeName) || "long".equals(typeName) || "double".equals(typeName)
 					|| "float".equals(typeName) || "short".equals(typeName)) {
 				return 0;
 			}
-			if ("boolean".equals(typeName) || "java.lang.boolean".equals(typeName)) {
+			if ("boolean".equals(typeName)) {
 				return false;
 			}
 			return null;
 		}
 		// value值的类型跟目标类型一致，直接返回
-		if (value.getClass().getTypeName().toLowerCase().equals(typeName)) {
+		if (value.getClass().getTypeName().equals(typeName)) {
 			return value;
 		}
 		// 针对非常规类型转换，将jdbc获取的字段结果转为java对象属性对应的类型
 		if (typeHandler != null) {
-			Object result = typeHandler.toJavaType(typeOriginName, genericType, paramValue);
+			Object result = typeHandler.toJavaType(typeName, genericType, paramValue);
 			if (result != null) {
 				return result;
 			}
 		}
 		// 非数组类型,但传递的参数值是数组类型且长度为1提取出数组中的单一值
-		if (!typeName.contains("[]") && paramValue.getClass().isArray()) {
-			boolean isStr = ("java.lang.string".equals(typeName) || "string".equals(typeName));
-			if ((paramValue instanceof byte[]) && isStr) {
+		if (paramValue.getClass().isArray() && !typeName.endsWith("[]")) {
+			boolean isStr = ("java.lang.String".equals(typeName));
+			if (isStr && (paramValue instanceof byte[])) {
 				paramValue = new String((byte[]) paramValue);
-			} else if ((paramValue instanceof char[]) && isStr) {
+			} else if (isStr && (paramValue instanceof char[])) {
 				paramValue = new String((char[]) paramValue);
 			} else {
 				Object[] paramAry = CollectionUtil.convertArray(paramValue);
 				if (paramAry.length > 1) {
 					throw new DataAccessException("不能将长度大于1,类型为:" + paramValue.getClass().getTypeName() + " 的数组转化为:"
-							+ typeOriginName + " 类型的值,请检查!");
+							+ typeName + " 类型的值,请检查!");
 				}
 				paramValue = paramAry[0];
+				if (paramValue == null) {
+					return null;
+				}
 			}
 		}
 		String valueStr = paramValue.toString();
 		// 字符串第一优先
-		if ("java.lang.string".equals(typeName) || "string".equals(typeName)) {
+		if ("java.lang.String".equals(typeName)) {
 			if (paramValue instanceof java.sql.Clob) {
 				java.sql.Clob clob = (java.sql.Clob) paramValue;
 				return clob.getSubString((long) 1, (int) clob.length());
@@ -506,14 +513,21 @@ public class BeanUtil {
 		}
 		boolean isBlank = "".equals(valueStr.trim());
 		// 第二优先
-		if ("java.math.bigdecimal".equals(typeName) || "decimal".equals(typeName) || "bigdecimal".equals(typeName)) {
+		if ("java.math.BigDecimal".equals(typeName)) {
 			if (isBlank) {
 				return null;
 			}
 			return new BigDecimal(convertBoolean(valueStr));
 		}
-		// 第三优先
-		if ("java.time.localdatetime".equals(typeName)) {
+		// 第三
+		if ("java.lang.Integer".equals(typeName)) {
+			if (isBlank) {
+				return null;
+			}
+			return Integer.valueOf(convertBoolean(valueStr).split("\\.")[0]);
+		}
+		// 第四优先
+		if ("java.time.LocalDateTime".equals(typeName)) {
 			if (paramValue instanceof LocalDateTime) {
 				return (LocalDateTime) paramValue;
 			}
@@ -523,8 +537,8 @@ public class BeanUtil {
 			}
 			return DateUtil.asLocalDateTime(DateUtil.convertDateObject(paramValue));
 		}
-		// 第四
-		if ("java.time.localdate".equals(typeName)) {
+		// 第五
+		if ("java.time.LocalDate".equals(typeName)) {
 			if (paramValue instanceof LocalDate) {
 				return (LocalDate) paramValue;
 			}
@@ -533,15 +547,8 @@ public class BeanUtil {
 			}
 			return DateUtil.asLocalDate(DateUtil.convertDateObject(paramValue));
 		}
-		// 第五
-		if ("java.lang.integer".equals(typeName) || "integer".equals(typeName)) {
-			if (isBlank) {
-				return null;
-			}
-			return Integer.valueOf(convertBoolean(valueStr).split("\\.")[0]);
-		}
 		// 第六
-		if ("java.sql.timestamp".equals(typeName) || "timestamp".equals(typeName)) {
+		if ("java.sql.Timestamp".equals(typeName)) {
 			if (paramValue instanceof java.sql.Timestamp) {
 				return (java.sql.Timestamp) paramValue;
 			}
@@ -556,13 +563,30 @@ public class BeanUtil {
 			}
 			return new Timestamp(DateUtil.parseString(valueStr).getTime());
 		}
-		if ("java.lang.double".equals(typeName)) {
+		// 第7
+		if ("java.lang.Long".equals(typeName)) {
 			if (isBlank) {
 				return null;
 			}
-			return Double.valueOf(valueStr);
+			// 考虑数据库中存在默认值为0.00 的问题，导致new Long() 报错
+			return Long.valueOf(convertBoolean(valueStr).split("\\.")[0]);
 		}
-		if ("java.util.date".equals(typeName) || "date".equals(typeName)) {
+		// 第8
+		if ("int".equals(typeName)) {
+			if (isBlank) {
+				return 0;
+			}
+			return Double.valueOf(convertBoolean(valueStr)).intValue();
+		}
+		// 第9 字符串转 boolean 型
+		if ("java.lang.Boolean".equals(typeName)) {
+			if ("true".equals(valueStr.toLowerCase()) || "1".equals(valueStr)) {
+				return Boolean.TRUE;
+			}
+			return Boolean.FALSE;
+		}
+		// 第10
+		if ("java.util.Date".equals(typeName)) {
 			if (paramValue instanceof java.util.Date) {
 				return (java.util.Date) paramValue;
 			}
@@ -574,35 +598,22 @@ public class BeanUtil {
 			}
 			return DateUtil.parseString(valueStr);
 		}
-		if ("java.lang.long".equals(typeName)) {
+		// 第11
+		if ("java.math.BigInteger".equals(typeName)) {
 			if (isBlank) {
 				return null;
 			}
-			// 考虑数据库中存在默认值为0.00 的问题，导致new Long() 报错
-			return Long.valueOf(convertBoolean(valueStr).split("\\.")[0]);
+			return new BigInteger(convertBoolean(valueStr).split("\\.")[0]);
 		}
-		if ("int".equals(typeName)) {
+		// 第12
+		if ("java.lang.Double".equals(typeName)) {
 			if (isBlank) {
-				return 0;
+				return null;
 			}
-			return Double.valueOf(convertBoolean(valueStr)).intValue();
+			return Double.valueOf(valueStr);
 		}
-		// clob 类型比较特殊,对外转类型全部转为字符串
-		if ("java.sql.clob".equals(typeName) || "clob".equals(typeName)) {
-			// update 2020-6-23 增加兼容性判断
-			if (paramValue instanceof String) {
-				return valueStr;
-			}
-			java.sql.Clob clob = (java.sql.Clob) paramValue;
-			BufferedReader in = new BufferedReader(clob.getCharacterStream());
-			StringWriter out = new StringWriter();
-			int c;
-			while ((c = in.read()) != -1) {
-				out.write(c);
-			}
-			return out.toString();
-		}
-		if ("java.time.localtime".equals(typeName)) {
+		// 第13
+		if ("java.time.LocalTime".equals(typeName)) {
 			if (paramValue instanceof LocalTime) {
 				return (LocalTime) paramValue;
 			}
@@ -610,13 +621,6 @@ public class BeanUtil {
 				return DateUtil.asLocalTime(oracleTimeStampConvert(paramValue));
 			}
 			return DateUtil.asLocalTime(DateUtil.convertDateObject(paramValue));
-		}
-		// add 2020-4-9
-		if ("java.math.biginteger".equals(typeName) || "biginteger".equals(typeName)) {
-			if (isBlank) {
-				return null;
-			}
-			return new BigInteger(convertBoolean(valueStr).split("\\.")[0]);
 		}
 		if ("long".equals(typeName)) {
 			if (isBlank) {
@@ -630,15 +634,8 @@ public class BeanUtil {
 			}
 			return Double.valueOf(valueStr).doubleValue();
 		}
-		// update by 2020-4-13增加Byte类型的处理
-		if ("java.lang.byte".equals(typeName)) {
-			return Byte.valueOf(valueStr);
-		}
-		if ("byte".equals(typeName)) {
-			return Byte.valueOf(valueStr).byteValue();
-		}
 		// byte数组
-		if ("byte[]".equals(typeName) || "[b".equals(typeName)) {
+		if ("byte[]".equals(typeName)) {
 			if (paramValue instanceof byte[]) {
 				return (byte[]) paramValue;
 			}
@@ -649,26 +646,7 @@ public class BeanUtil {
 			}
 			return valueStr.getBytes();
 		}
-		// 字符串转 boolean 型
-		if ("java.lang.boolean".equals(typeName) || "boolean".equals(typeName)) {
-			if ("true".equals(valueStr.toLowerCase()) || "1".equals(valueStr)) {
-				return Boolean.TRUE;
-			}
-			return Boolean.FALSE;
-		}
-		if ("java.lang.short".equals(typeName)) {
-			if (isBlank) {
-				return null;
-			}
-			return Short.valueOf(Double.valueOf(convertBoolean(valueStr)).shortValue());
-		}
-		if ("short".equals(typeName)) {
-			if (isBlank) {
-				return 0;
-			}
-			return Double.valueOf(convertBoolean(valueStr)).shortValue();
-		}
-		if ("java.lang.float".equals(typeName)) {
+		if ("java.lang.Float".equals(typeName)) {
 			if (isBlank) {
 				return null;
 			}
@@ -680,7 +658,19 @@ public class BeanUtil {
 			}
 			return Float.valueOf(valueStr).floatValue();
 		}
-		if ("java.sql.date".equals(typeName)) {
+		if ("java.lang.Short".equals(typeName)) {
+			if (isBlank) {
+				return null;
+			}
+			return Short.valueOf(Double.valueOf(convertBoolean(valueStr)).shortValue());
+		}
+		if ("short".equals(typeName)) {
+			if (isBlank) {
+				return 0;
+			}
+			return Double.valueOf(convertBoolean(valueStr)).shortValue();
+		}
+		if ("java.sql.Date".equals(typeName)) {
 			if (paramValue instanceof java.sql.Date) {
 				return (java.sql.Date) paramValue;
 			}
@@ -695,27 +685,44 @@ public class BeanUtil {
 			}
 			return new java.sql.Date(DateUtil.parseString(valueStr).getTime());
 		}
-		if ("char".equals(typeName)) {
-			if (isBlank) {
-				return " ".charAt(0);
+		// clob 类型比较特殊,对外转类型全部转为字符串
+		if ("java.sql.Clob".equals(typeName)) {
+			// update 2020-6-23 增加兼容性判断
+			if (paramValue instanceof String) {
+				return valueStr;
 			}
-			return valueStr.charAt(0);
+			java.sql.Clob clob = (java.sql.Clob) paramValue;
+			BufferedReader in = new BufferedReader(clob.getCharacterStream());
+			StringWriter out = new StringWriter();
+			int c;
+			while ((c = in.read()) != -1) {
+				out.write(c);
+			}
+			return out.toString();
 		}
-		if ("java.sql.time".equals(typeName) || "time".equals(typeName)) {
+		if ("java.sql.Time".equals(typeName)) {
 			if (paramValue instanceof java.sql.Time) {
 				return (java.sql.Time) paramValue;
 			}
 			if (paramValue instanceof java.util.Date) {
 				return new java.sql.Time(((java.util.Date) paramValue).getTime());
 			}
-
 			if ("oracle.sql.TIMESTAMP".equals(paramValue.getClass().getTypeName())) {
 				return new java.sql.Time(oracleDateConvert(paramValue).getTime());
 			}
 			return DateUtil.parseString(valueStr);
 		}
+		if ("byte".equals(typeName)) {
+			return Byte.valueOf(valueStr).byteValue();
+		}
+		if ("char".equals(typeName)) {
+			if (isBlank) {
+				return " ".charAt(0);
+			}
+			return valueStr.charAt(0);
+		}
 		// 字符数组
-		if ("char[]".equals(typeName) || "[c".equals(typeName)) {
+		if ("char[]".equals(typeName)) {
 			if (paramValue instanceof char[]) {
 				return (char[]) paramValue;
 			}
@@ -731,14 +738,18 @@ public class BeanUtil {
 			}
 			return valueStr.toCharArray();
 		}
+		// update by 2020-4-13增加Byte类型的处理
+		if ("java.lang.Byte".equals(typeName)) {
+			return Byte.valueOf(valueStr);
+		}
 		// 数组类型
-		if ((typeName.contains("[]") || typeName.contains("[")) && (paramValue instanceof Array)) {
+		if (typeName.endsWith("[]") && (paramValue instanceof Array)) {
 			return convertArray(((Array) paramValue).getArray(), typeName);
 		}
 		return paramValue;
 	}
 
-	private static String convertBoolean(String var) {
+	public static String convertBoolean(String var) {
 		if ("true".equals(var)) {
 			return "1";
 		}
@@ -1568,7 +1579,7 @@ public class BeanUtil {
 			setMethods.put(key, method);
 		}
 		// 将数据类型进行转换再赋值
-		String type = method.getParameterTypes()[0].getTypeName();
+		String typeName = method.getParameterTypes()[0].getTypeName();
 		Type[] types = method.getGenericParameterTypes();
 		Class genericType = null;
 		if (types.length > 0) {
@@ -1577,7 +1588,7 @@ public class BeanUtil {
 			}
 		}
 		try {
-			method.invoke(bean, convertType(null, value, type, genericType));
+			method.invoke(bean, convertType(null, value, typeName, genericType));
 		} catch (Exception e) {
 			e.printStackTrace();
 			throw new RuntimeException(e.getMessage());
@@ -1665,29 +1676,22 @@ public class BeanUtil {
 		// update 2020-9-16
 		// 主要规避VO对象{{}}模式初始化，导致Class获取变成了内部类(双括号实例化modifiers会等于0)
 		// {{}}实例化得到的class是不正确的，所以这里将==0的进入后续判断
-		if (entityClass == null || entityClass.getModifiers() != 0) {
+		if (entityClass == null || entityClass.equals(Object.class) || entityClass.getModifiers() != 0) {
 			return entityClass;
 		}
 		Class realEntityClass = entityClass;
 		// 通过逐层递归来判断是否SqlToy annotation注解所规定的关联数据库的实体类
 		// 即@Entity 注解的抽象类
-		boolean isEntity = realEntityClass.isAnnotationPresent(SqlToyEntity.class)
-				|| (realEntityClass.isAnnotationPresent(Entity.class)
-						&& !Modifier.isAbstract(realEntityClass.getModifiers()));
-		while (!isEntity) {
-			realEntityClass = realEntityClass.getSuperclass();
-			if (realEntityClass == null || realEntityClass.equals(Object.class)) {
-				break;
-			}
-			isEntity = realEntityClass.isAnnotationPresent(SqlToyEntity.class)
+		while (!realEntityClass.equals(Object.class)) {
+			// 实体bean
+			if (realEntityClass.isAnnotationPresent(SqlToyEntity.class)
 					|| (realEntityClass.isAnnotationPresent(Entity.class)
-							&& !Modifier.isAbstract(realEntityClass.getModifiers()));
+							&& !Modifier.isAbstract(realEntityClass.getModifiers()))) {
+				return realEntityClass;
+			}
+			realEntityClass = realEntityClass.getSuperclass();
 		}
-		if (isEntity) {
-			return realEntityClass;
-		} // 再进一步规避一次普通VO/DTO 的{{}}实例化
-		else if (entityClass.getModifiers() == 0 && entityClass.getSuperclass() != null
-				&& !entityClass.getSuperclass().equals(Object.class)) {
+		if (entityClass.getModifiers() == 0 && !entityClass.getSuperclass().equals(Object.class)) {
 			return entityClass.getSuperclass();
 		}
 		return entityClass;
@@ -1699,7 +1703,7 @@ public class BeanUtil {
 	 * @param type   (已经小写)
 	 * @return
 	 */
-	private static Object convertArray(Object values, String type) {
+	public static Object convertArray(Object values, String type) {
 		// 类型完全一致
 		if (type == null || type.equals(values.getClass().getTypeName().toLowerCase())) {
 			return values;
